Add homepage content

--- a/home_fix/basic/templates/basic/homepage.html
+++ b/home_fix/basic/templates/basic/homepage.html
@@ -130,8 +130,7 @@
                     </div>
                     <div>
                         <h2>Earn Points</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another
-                            sentence and probably just keep going until we run out of words.</p>
+                        <p>You can earn points for the services you successfully provide which you can then utilize to request services. Moreover, you could redeem those points at nearby hardware stores!</p>
                     </div>
                 </div>
             </div>
@@ -146,14 +145,14 @@
             <div class="row gx-5">
                 <div class="col-lg-4 mb-5">
                     <div class="card h-100 shadow border-0">
-                        <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..."/>
+                        <img class="card-img-top" src="https://i.ibb.co/dJS8C91/pexels-martins-krastins-838981.jpg" alt="Fix wall">
+{#                        <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..."/>#}
                         <div class="card-body p-4">
                             <div class="badge bg-success bg-gradient rounded-pill mb-2">Fix Wall</div>
                             <a class="text-decoration-none link-dark stretched-link" href="#!">
-                                <div class="h5 card-title mb-3">Post title</div>
+                                <div class="h5 card-title mb-3">Professional Wall Fixer</div>
                             </a>
-                            <p class="card-text mb-0">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <p class="card-text mb-0">Hi, I am a wall fixer with 8 years of experience and I can fix almost any walls. So what are you waiting for? Take my serive now!</p>
                         </div>
                         <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                             <div class="d-flex align-items-end justify-content-between">
@@ -171,15 +170,14 @@
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="card h-100 shadow border-0">
-                        <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..."/>
+                        <img class="card-img-top" src="https://i.ibb.co/cLV0h0T/pexels-la-miko-3616761.jpg" alt="Plumbing Image">
+{#                        <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..."/>#}
                         <div class="card-body p-4">
                             <div class="badge bg-success bg-gradient rounded-pill mb-2">Plumbing</div>
                             <a class="text-decoration-none link-dark stretched-link" href="#!">
-                                <div class="h5 card-title mb-3">Another post title</div>
+                                <div class="h5 card-title mb-3">Pro Plumber in your area</div>
                             </a>
-                            <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of
-                                each card. Some quick example text to build on the card title and make up the bulk of
-                                the card's content.</p>
+                            <p class="card-text mb-0">Hi I am Josiah, I am full time plumber and I can fix your plumbing problems. <br/>#cheap #affordable </p>
                         </div>
                         <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                             <div class="d-flex align-items-end justify-content-between">
@@ -197,16 +195,15 @@
                 </div>
                 <div class="col-lg-4 mb-5">
                     <div class="card h-100 shadow border-0">
-                        <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..."/>
+                        <img class="card-img-top" src="https://i.ibb.co/bWQBPg8/pexels-monstera-7794451.jpg" alt="Broken door">
+{#                        <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..."/>#}
                         <div class="card-body p-4">
                             <div class="badge bg-primary bg-success rounded-pill mb-2">Broken door</div>
                             <a class="text-decoration-none link-dark stretched-link" href="#!">
-                                <div class="h5 card-title mb-3">The last post title is a little bit longer than the
-                                    others
+                                <div class="h5 card-title mb-3">Fix doors or windows
                                 </div>
                             </a>
-                            <p class="card-text mb-0">Some more quick example text to build on the card title and make
-                                up the bulk of the card's content.</p>
+                            <p class="card-text mb-0">Request me now, if you wish to fix any broken doors or windows at your home. Request my service and we can setup a convenient time for you.</p>
                         </div>
                         <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                             <div class="d-flex align-items-end justify-content-between">
