--- a/home_fix/user_center/templates/user_center/profile_editor.html
+++ b/home_fix/user_center/templates/user_center/profile_editor.html
@@ -64,7 +64,9 @@
 
                                     <div class="clearfix"></div>
                                     <hr style="margin:5px 0 5px 0;">
-
+                                    {% if info%}
+                                    <div> {{info}}</div>
+                                    {% endif %}
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="row">
