--- a/home_fix/map/templates/map/locs_hardware.html
+++ b/home_fix/map/templates/map/locs_hardware.html
@@ -35,7 +35,6 @@
     var locations = eval("{{user_loc|safe}}");
     var uluru = { lat: locations[0], lng: locations[1] };
     
-    console.log(locations);
     
     map = new google.maps.Map(document.getElementById("map"), {
       center: uluru,
@@ -56,6 +55,20 @@
         icon: icons["users"].icon,
         map: map,
       });
+      const infowindow = new google.maps.InfoWindow({
+            content: userlocations[i][2]+" </br>"+ userlocations[i][3]+" </br>"+ userlocations[i][4],
+
+          });
+
+
+           markerus.addListener('mouseover', function() {  
+          
+              infowindow.open(map, this);
+              //map.setCenter(marker.getPosition());
+          });
+          markerus.addListener('mouseout', function() {
+              infowindow.close();
+          });
     }
     let request = {
       location: uluru,
