--- a/home_fix/basic/templates/basic/layout.html
+++ b/home_fix/basic/templates/basic/layout.html
@@ -55,7 +55,7 @@
             <div class="dropdown">
                 <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
                    id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
+                    <img src="https://github.com/mdo.png" alt="My Pic" width="32" height="32"
                          class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
