--- a/home_fix/admin_system/templates/admin_system/report.html
+++ b/home_fix/admin_system/templates/admin_system/report.html
@@ -1,45 +1,138 @@
 {% extends "basic/layout.html" %}
-{% block title %} Report List | Homefix{% endblock %}
+{% load static %}
+{% block head %}
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/dashboard/">
+    <link rel="stylesheet" href="{% static 'admin_system/dashboard.css' %}"/>
+{% endblock %}
+{% block title %} Reports | Homefix{% endblock %}
 {% block body %}
+        <div class="container-fluid">
+        <div class="row">
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+                <div class="position-sticky pt-3">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{% url 'basic:index' %}">
+                                <span data-feather="home"></span>
+                                Dashboard
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'admin_system:user' %}">
+                                <span data-feather="users"></span>
+                                Customers
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="{% url 'admin_system:report' %}">
+                                <span data-feather="bar-chart-2"></span>
+                                Reports
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">
+                                <span data-feather="shopping-cart"></span>
+                                Products
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
-<br><br>
-<center>
-    <h1 class="display-5 fw-bold">Report list</h1>
-</center>
-<br><br>
-<div class="container">
-    <table class=" table table-hover table-bordered">
-        <thead class="table-light">
-        <tr>
-            <th scope="col">Date</th>
-            <th scope="col">Report ID</th>
-            <th scope="col">Reporter</th>
-            <th scope="col">Service ID</th>
-            <th scope="col">Status</th>
-            <th scope="col">Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for report in reports%}
-        <tr>
-            <td>{{ report.timestamp }}</td>
-            <td>{{ report.id }}</td>
-            <td>{{ report.reporter }}</td>
-            <td><a href="{% url 'service:service_detail' report.service.id %}" target="_blank">{{report.service.id}}
-                </a></td>
-            <td>{{ report.status }}</td>
-            <td>
-                {% if report.status == "unsolved"%}
-                <form method="post">
-                    <input id="report_id" name="report_id" value="{{report.id}}" type="hidden">
-                    {% csrf_token %}
-                    <button>Confirm</button>
-                </form>
-                {% endif %}
-            </td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <h1 class="h2">Reported Posts</h1>
+                    <div class="btn-toolbar mb-2 mb-md-0">
+                        <div class="btn-group me-2">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="table-responsive">
+                    <table class="table table-striped table-sm">
+                        <thead>
+                        <tr>
+                            <th scope="col">Report ID</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Reporter</th>
+                            <th scope="col">Service ID</th>
+                            <th scope="col">Status</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for report in reports %}
+                            <tr>
+                                <td>{{ report.id }}</td>
+                                <td>{{ report.timestamp }}</td>
+                                <td>{{ report.reporter }}</td>
+                                <td><a href="{% url 'service:service_detail' report.service.id %}"
+                                       target="_blank">{{ report.service.id }}
+                                </a></td>
+                                <td>{{ report.status }}</td>
+                                <td>
+                                    {% if report.status == "unsolved" %}
+                                        <form method="post">
+                                            <input id="report_id" name="report_id" value="{{ report.id }}"
+                                                   type="hidden">
+                                            {% csrf_token %}
+                                            <button>Confirm</button>
+                                        </form>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </main>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"
+            integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE"
+            crossorigin="anonymous"></script>
+    <script src="{% static 'admin_system/dashboard.js' %}"></script>
+
+{#<br><br>#}
+{#<center>#}
+{#    <h1 class="display-5 fw-bold">Report list</h1>#}
+{#</center>#}
+{#<br><br>#}
+{#<div class="container">#}
+{#    <table class=" table table-hover table-bordered">#}
+{#        <thead class="table-light">#}
+{#        <tr>#}
+{#            <th scope="col">Date</th>#}
+{#            <th scope="col">Report ID</th>#}
+{#            <th scope="col">Reporter</th>#}
+{#            <th scope="col">Service ID</th>#}
+{#            <th scope="col">Status</th>#}
+{#            <th scope="col">Action</th>#}
+{#        </tr>#}
+{#        </thead>#}
+{#        <tbody>#}
+{#        {% for report in reports%}#}
+{#        <tr>#}
+{#            <td>{{ report.timestamp }}</td>#}
+{#            <td>{{ report.id }}</td>#}
+{#            <td>{{ report.reporter }}</td>#}
+{#            <td><a href="{% url 'service:service_detail' report.service.id %}" target="_blank">{{report.service.id}}#}
+{#                </a></td>#}
+{#            <td>{{ report.status }}</td>#}
+{#            <td>#}
+{#                {% if report.status == "unsolved"%}#}
+{#                <form method="post">#}
+{#                    <input id="report_id" name="report_id" value="{{report.id}}" type="hidden">#}
+{#                    {% csrf_token %}#}
+{#                    <button>Confirm</button>#}
+{#                </form>#}
+{#                {% endif %}#}
+{#            </td>#}
+{#        </tr>#}
+{#        {% endfor %}#}
+{#        </tbody>#}
+{#    </table>#}
+{#</div>#}
 {% endblock  %}
