Replace search icon

--- a/home_fix/users/templates/users/set_location.html
+++ b/home_fix/users/templates/users/set_location.html
@@ -23,7 +23,7 @@
                     <div class="input-group mb-3 shadow">
                         <input type="text" id="search_location" class="form-control form-input"
                                placeholder="Search location">
-                        <button class="btn btn-outline-primary" type="button" id="search"><i class="fas fa-search"></i>
+                        <button class="btn btn-outline-primary" type="button" id="search">Autofill!
                         </button>
                     </div>
                 </div>
