--- a/home_fix/service/templates/service/offer_services.html
+++ b/home_fix/service/templates/service/offer_services.html
@@ -59,7 +59,7 @@
                     <div class="input-group mb-3">
                         <input type="text" id="search_location" class="form-control form-input"
                                placeholder="Search location">
-                        <button class="btn btn-outline-primary" type="button" id="search"><i class="fas fa-search"></i>
+                        <button class="btn btn-outline-primary" type="button" id="search">Autofill!
                         </button>
                     </div>
                 </div>
