pricing bug fixed

--- a/home_fix/users/templates/users/pricing.html
+++ b/home_fix/users/templates/users/pricing.html
@@ -59,13 +59,14 @@
                             {% if used_free == 0 %}
                             <form action="{% url 'users:pricing' %}" method="post">
                                 {% csrf_token %}
+                                {#                                <button type="button" id="checkout-button" class="w-100 btn btn-lg btn-outline-primary">Checkout</button>#}
                                 <button type="submit" class="w-100 btn btn-lg btn-outline-primary" value="1" name="tier"
                                 >Select
-                                </button>                                
+                                </button>
                             </form>
                             {% else %}
-                            <p>You have already used it! Please use our paid subscription plans.</p>
-                            {% endif %}
+                            <p>You have used up your free subscription tier! Please buy the paid subscription plans!</p>
+                            {% endif%}
                         </div>
                     </div>
                 </div>
