--- a/home_fix/users/templates/users/login.html
+++ b/home_fix/users/templates/users/login.html
@@ -66,13 +66,13 @@
                 <div class="col-auto">
                     <div class="small m-0 text-white">Copyright &copy; Homefix 2022</div>
                 </div>
-                <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
-                </div>
+                    <div class="col-auto">
+                        <a class="link-light small" href="{% url 'users:privacy' %}">Privacy</a>
+                        <span class="text-white mx-1">&middot;</span>
+                        <a class="link-light small" href="{% url 'users:privacy' %}">Terms</a>
+                        <span class="text-white mx-1">&middot;</span>
+                        <a class="link-light small" href="{% url 'users:about' %}">Contact</a>
+                    </div>
             </div>
         </div>
     </footer>
