Hide user details in map

--- a/home_fix/map/templates/map/locs_hardware.html
+++ b/home_fix/map/templates/map/locs_hardware.html
@@ -63,11 +63,11 @@
 
            markerus.addListener('mouseover', function() {  
           
-              infowindow.open(map, this);
+              {#infowindow.open(map, this);#}
               //map.setCenter(marker.getPosition());
           });
           markerus.addListener('mouseout', function() {
-              infowindow.close();
+              {#infowindow.close();#}
           });
     }
     let request = {
