Protect developer images

--- a/home_fix/basic/templates/basic/layout.html
+++ b/home_fix/basic/templates/basic/layout.html
@@ -58,6 +58,7 @@
                 </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="{% url 'service:request_service' %}" class="nav-link px-2 text-white">Request Service</a></li>
                     <li><a href="{% url 'map:search_hardware' %}" class="nav-link px-2 text-white">Maps</a></li>
                     <li><a href="{% url 'users:pricing' %}" class="nav-link px-2 text-white">Pricing</a></li>
                     <li><a href="{% url 'forum:Forum' %}" class="nav-link px-2 text-white">Forums</a></li>
