--- a/home_fix/users/templates/users/about.html
+++ b/home_fix/users/templates/users/about.html
@@ -70,14 +70,14 @@
             <div class="col-lg-4">
                 <img class="rounded-circle"
                      src="https://media-exp1.licdn.com/dms/image/C5603AQFPI7N3l_ALWQ/profile-displayphoto-shrink_800_800/0/1630719368769?e=1655337600&v=beta&t=qYOkgeNCv6IfxXniy0gpFAEWYL1lVUvwbPtkIoJosMY"
-                     width="140" height="140">
+                     width="140" height="140" style="pointer-events: none">
                 <h2>Pruthviraj R Patil</h2>
                 <p> Developer, Master of Computer Science, Class of 2022, New York University</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle"
                      src="https://media-exp1.licdn.com/dms/image/C5103AQGbe9HpUh-qpA/profile-displayphoto-shrink_800_800/0/1563697056417?e=1656547200&v=beta&t=cKUk7_iOkQNmrzKWdK2aaosDMT_zx4L_ZEhjjv-FGf4"
-                     width="140" height="140">
+                     width="140" height="140" style="pointer-events: none">
 
                 <h2>Bharath C</h2>
                 <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
@@ -85,7 +85,7 @@
             <div class="col-lg-4">
                 <img class="rounded-circle"
                      src="https://media-exp1.licdn.com/dms/image/C5603AQG5vZ_BcB2hQA/profile-displayphoto-shrink_800_800/0/1625591269907?e=1655337600&v=beta&t=qvaD1eugYcUq16ucPt8KjzTPJXMW27XT-h3grj6wPrk"
-                     width="140" height="140">
+                     width="140" height="140" style="pointer-events: none">
 
                 <h2>Vijay Krishna</h2>
                 <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
@@ -97,7 +97,7 @@
             <div class="col-sm-4">
                 <img class="rounded-circle"
                      src="https://media-exp1.licdn.com/dms/image/C4D03AQE4LJ8Q4s0r9g/profile-displayphoto-shrink_800_800/0/1622879772332?e=1655337600&v=beta&t=FkqDjuUXzTTpg1YvyH1szUzatJ0FGJ3wC6vSNkuLS_Q"
-                     width="140" height="140">
+                     width="140" height="140" style="pointer-events: none">
                 <h2>Yuhao Zhang</h2>
                 <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
             </div>
@@ -105,7 +105,7 @@
             <div class="col-sm-4">
                 <img class="rounded-circle"
                      src="https://media-exp1.licdn.com/dms/image/C5103AQGcAbThydA1Ow/profile-displayphoto-shrink_400_400/0/1563512627619?e=1656547200&v=beta&t=EeXNY_m8dpBk2QhPVyG9rXD-JWLgjp1rOFUo2wnit_g"
-                     width="140" height="140">
+                     width="140" height="140" style="pointer-events: none">
                 <h2>Jash J Merchant</h2>
                 <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
             </div>
