--- a/home_fix/users/templates/users/register.html
+++ b/home_fix/users/templates/users/register.html
@@ -67,9 +67,9 @@
                                 <label class="form-check-label" for="inlineRadio3">Other</label>
                             </div>
                             <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="gender" id="other" value="other"
+                                <input class="form-check-input" type="radio" name="gender" id="" value=""
                                        required>
-                                <label class="form-check-label" for="inlineRadio3">I don't wish to answer</label>
+                                <label class="form-check-label" for="inlineRadio4">I don't wish to answer</label>
                             </div>
                         </div>
                         {% if form.errors.gender.data.0 %}
