--- a/home_fix/service/templates/service/service_detail.html
+++ b/home_fix/service/templates/service/service_detail.html
@@ -61,8 +61,9 @@
                     {% if not is_same %}
                         <b> <label class="form-label" for="country">Service Charge</label></b>
                         <br>
-                        <p>{{ services.coins_charged }} + <span class="text-danger">{{ commission }}.00 (Commssion Fee)</span></p>
-{#                        <p style="color: red;"></p>#}
+                        <p>{{ services.coins_charged }} + <span
+                                class="text-danger">{{ commission }}.00 (Commssion Fee)</span></p>
+                        {#                        <p style="color: red;"></p>#}
                     {% else %}
                         <b> <label class="form-label" for="country">Coins Charged</label></b>
                         <br>
@@ -75,31 +76,32 @@
                 <div>
                     {% if services.visible %}
                         {% if not is_same %}
-                            {#                            {% if message %}#}
-                            {#                                <button type="button" class="btn btn-warning btn-lg px-4 gap-3"#}
-                            {#                                > {{ message }}#}
-                            {#                                </button>#}
-                            {#                            {% else %}#}
-                            {% if order %}
-                                {% if order.status == 'pending' or order.status == 'in progress' %}
-{#                                    <div class="btn-group" role="group" aria-label="Basic outlined example">#}
-                                    <button type="button" class="btn btn-primary btn-md" disabled
-                                            onclick="location.href='{% url 'service:request_service_confirm' services.id %}'">
-                                        <i class="fa-solid fa-spinner"></i> Work in progress
-                                    </button>
+                            {% if message %}
+                                <button type="button" class="btn btn-warning px-4 gap-3"
+                                > {{ message }}
+                                </button>
+                            {% else %}
+                                {% if order %}
+                                    {% if order.status == 'pending' or order.status == 'in progress' %}
+                                        {#                                    <div class="btn-group" role="group" aria-label="Basic outlined example">#}
+                                        <button type="button" class="btn btn-primary btn-md" disabled
+                                                onclick="location.href='{% url 'service:request_service_confirm' services.id %}'">
+                                            <i class="fa-solid fa-spinner"></i> Work in progress
+                                        </button>
+                                    {% else %}
+                                        {#                                    <div class="btn-group" role="group" aria-label="Basic outlined example">#}
+                                        <button type="button" class="btn btn-primary btn-md"
+                                                onclick="location.href='{% url 'service:request_service_confirm' services.id %}'">
+                                            <i class="fa-solid fa-hand-pointer"></i> Take
+                                        </button>
+                                    {% endif %}
                                 {% else %}
-{#                                    <div class="btn-group" role="group" aria-label="Basic outlined example">#}
-                                    <button type="button" class="btn btn-primary btn-md"
+                                    {#                                <div class="btn-group" role="group" aria-label="Basic outlined example">#}
+                                    <button type="button" class="btn btn-primary btn-md mx-2"
                                             onclick="location.href='{% url 'service:request_service_confirm' services.id %}'">
                                         <i class="fa-solid fa-hand-pointer"></i> Take
                                     </button>
                                 {% endif %}
-                            {% else %}
-{#                                <div class="btn-group" role="group" aria-label="Basic outlined example">#}
-                                <button type="button" class="btn btn-primary btn-md mx-2"
-                                        onclick="location.href='{% url 'service:request_service_confirm' services.id %}'">
-                                    <i class="fa-solid fa-hand-pointer"></i> Take
-                                </button>
                             {% endif %}
                             {#                            {% endif %}#}
                             <button type="button" class="btn btn-danger btn-md mx-2" data-toggle="modal"
@@ -107,7 +109,7 @@
                                     onclick=""><i class="fa-solid fa-circle-exclamation"></i> Report
                             </button>
                         {% else %}
-{#                            <div class="btn-group" role="group" aria-label="Basic outlined example">#}
+                            {#                            <div class="btn-group" role="group" aria-label="Basic outlined example">#}
                             <a class="btn btn-danger btn-md mx-2"
                                href="{% url 'service:request_service_delete' services.id %}"
                                role="button"><i class="fa-solid fa-trash"></i> Delete</a>
@@ -116,17 +118,18 @@
                     <button type="button" class="btn btn-dark btn-md"
                             onclick="window.history.back()"><i class="fa-solid fa-arrow-rotate-left"></i> Go Back
                     </button>
-{#                    </div>#}
+                    {#                    </div>#}
                     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
                          aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="exampleModalLabel">Report</h5>
-{#                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">#}
-{#                                        <span aria-hidden="true">&times;</span>#}
-{#                                    </button>#}
-                                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+                                    {#                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">#}
+                                    {#                                        <span aria-hidden="true">&times;</span>#}
+                                    {#                                    </button>#}
+                                    <button type="button" class="btn-close" data-dismiss="modal"
+                                            aria-label="Close"></button>
                                 </div>
                                 <form role="form" method="post" role="form" id="report_form"
                                       action="{% url 'service:report' services.id %}">
