--- a/home_fix/users/templates/users/register.html
+++ b/home_fix/users/templates/users/register.html
@@ -6,9 +6,9 @@
         <div class="container py-5 h-100">
             <div class="row d-flex align-items-center justify-content-center h-100">
                 <div class="col-md-8 col-lg-7 col-xl-6">
-                    <img src="https://i.ibb.co/gyNd6Jp/undraw-My-password-re-ydq7-1.png"
-                         alt="undraw-My-password-re-ydq7-1"
-                         border="0">
+{#                    <img src="https://i.ibb.co/gyNd6Jp/undraw-My-password-re-ydq7-1.png"#}
+{#                         alt="undraw-My-password-re-ydq7-1"#}
+{#                         border="0">#}
                 </div>
                 <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
                     <h1 class="mb-4"><strong>Create an account</strong></h1>
@@ -106,17 +106,17 @@
                         </div>
                         <br>
                         <!-- Submit button -->
-                        <button type="submit" class="btn btn-outline-warning mb-3 shadow">Register</button>
+                        <button type="submit" class="btn btn-warning mb-3">Register</button>
                     </form>
                     <p>Already have an account? <a href="{% url 'users:login' %}">Login</a></p>
 
                     <hr class="my-3">
 
                     <div class="d-grid gap-3 col-6 mx-auto">
-                        <a class="btn btn-primary btn-lg btn-block shadow" style="background-color: #3b5998" href="#!"
-                           role="button">
-                            <i class="fab fa-facebook-f me-2"></i>Continue with Meta
-                        </a>
+{#                        <a class="btn btn-primary btn-lg btn-block shadow" style="background-color: #3b5998" href="#!"#}
+{#                           role="button">#}
+{#                            <i class="fab fa-facebook-f me-2"></i>Continue with Meta#}
+{#                        </a>#}
                         <a class="btn btn-light btn-lg btn-block shadow" href="{% provider_login_url 'google' %}" role="button">
                             <i class="fa-brands fa-google"></i> Continue with Google</a>
                     </div>
