--- a/home_fix/admin_system/templates/admin_system/report.html
+++ b/home_fix/admin_system/templates/admin_system/report.html
@@ -29,12 +29,12 @@
                             Reports
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span>
-                            Products
-                        </a>
-                    </li>
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="#">#}
+{#                            <span data-feather="shopping-cart"></span>#}
+{#                            Products#}
+{#                        </a>#}
+{#                    </li>#}
                 </ul>
             </div>
         </nav>
