--- a/home_fix/basic/templates/basic/homepage.html
+++ b/home_fix/basic/templates/basic/homepage.html
@@ -40,12 +40,12 @@
                                     Reports
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    <span data-feather="shopping-cart"></span>
-                                    Products
-                                </a>
-                            </li>
+{#                            <li class="nav-item">#}
+{#                                <a class="nav-link" href="#">#}
+{#                                    <span data-feather="shopping-cart"></span>#}
+{#                                    Products#}
+{#                                </a>#}
+{#                            </li>#}
                         </ul>
                     </div>
                 </nav>
